export enum Turno {
    MAÑANA = "MAÑANA",
    TARDE = "TARDE",
    VESPERTINO = "VESPERTINO",
    NOCHE = "NOCHE"
}