@startuml
enum TipoDesignacion {
   CARGO
   ESPACIO CURRICULAR
}

class Division <<Entity>> {
  int anio
  int numDivision
  String Orientacion
  enum Turno ['Mañana','Tarde','Vespertino','Noche']
}

class Cargo <<Entity>> {
  String nombre
  int CargaHoraria
  DATETIME FechaInicio
  DATETIME FechaFin
}

Cargo "*" --> "1" TipoDesignacion
Cargo "*" ..> "1" Division

class Persona <<Entity>> {
  BIGINT Dni
  String Cuil[30]
  String Nombre[90]
  String Apellido[90]
  String Titulo[90]
  CHARACTER Sexo
  String Domicilio[90]
  String Telefono[30]
}

class Designacion <<Entity>> {
  String SituacionRevista[45]
  DATETIME FechaInicio
  DATETIME FechaFin
}

Designacion "*" <--> "1" Persona
Designacion "*" --> "1" Cargo

class Horario <<Entity>> {
  String Dia[10]
  int Hora
}

Cargo "1" --> "*" Horario

class ArticuloLicencia <<Entity>> {
  String Articulo[10]
  String Descripcion[90]
}

class Licencia <<Entity>> {
  DATETIME PedidoDesde
  DATETIME PedidoHasta
  String Domicilio[90]
  bool CertificadoMedico
}

Licencia "*" --> "1" Persona
Licencia "*" --> "1" ArticuloLicencia
Licencia "*" --> "*" Designacion

@enduml
